--- a/src/components/Grid/styles.scss
+++ b/src/components/Grid/styles.scss
@@ -1,17 +1,18 @@
 @import '../../styles/vars';
 
 .grid-container {
-    max-height: 100%;
-    width: 90%;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
-    background-color: $yellow;
-    border: 3px solid black;
-    z-index: 1;
-    position: absolute;
-    top: 20px;
-    margin-bottom: 2em;
+  max-height: 100%;
+  width: 90%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+  background-color: $yellow;
+  border: 3px solid black;
+  z-index: 1;
+  position: absolute;
+  right: 50%;
+  top: 20px;
+  transform: translateX(50%);
 }
 .square {
     background-color:$yellow;
@@ -276,7 +277,4 @@
 
 
 @media screen and (min-width: 800px) {
-    .grid-container {
-        display: none;
-    }
 }
