--- a/src/components/Infos/styles.scss
+++ b/src/components/Infos/styles.scss
@@ -3,6 +3,10 @@
 .infos {
     width: 90%;
     margin: 0 auto;
+    &--modifier {
+      margin-top: 50em;
+      margin-bottom: 5em;
+    }
     &__title {
         font-size: 2.8em;
         font-family: $font;
@@ -51,8 +55,8 @@
             margin-top: 0.5em;
             align-self: flex-start;
             &--modifier {
-                height: 60px;
-                width: 60px;
+              height: 60px;
+              width: 60px;
             }
             
         }
